force-app/main/default/objects/SPEN_CallDetails__c/SPEN_CallDetails__c.object-meta.xml
<CustomObject>
    <description>This custom object will be used as an extension of the Voice Call object</description>
    <label>Call Details</label>
    <nameField>
        <displayFormat>CD-{00000000}</displayFormat>
        <label>Call Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Call Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>