force-app/main/default/objects/SPEN_CallDetails__c/fields/SPEN_CallbackOffered__c.field-meta.xml
<CustomField>
    <fullName>SPEN_CallbackOffered__c</fullName>
    <label>Callback Offered</label>
    <length>50</length>
    <type>Text</type>
</CustomField>