force-app/main/default/objects/SPEN_CallDetails__c/fields/SPEN_CallbackRequested__c.field-meta.xml
<CustomField>
    <fullName>SPEN_CallbackRequested__c</fullName>
    <label>Callback Requested</label>
    <length>50</length>
    <type>Text</type>
</CustomField>