force-app/main/default/objects/SPEN_CallDetails__c/fields/SPEN_CallInSLAFormula__c.field-meta.xml
<CustomField>
    <fullName>SPEN_CallInSLAFormula__c</fullName>
    <formula>((SPEN_ParentVoiceCall__r.SPEN_CallAcceptedDateTime__c)- (SPEN_ParentVoiceCall__r.CallQueuedDateTime))* 24 * 60 * 60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Call in SLA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>