force-app/main/default/objects/SPEN_CallDetails__c/fields/SPEN_CallTransferredTime__c.field-meta.xml
<CustomField>
    <fullName>SPEN_CallTransferredTime__c</fullName>
    <description>SFAMS-286: Capture transfered call time.</description>
    <label>Call Transferred Time</label>
    <type>DateTime</type>
</CustomField>