force-app/main/default/objects/SPEN_CallDetails__c/fields/SPEN_CallTransferredToMobilePhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>SPEN_CallTransferredToMobilePhoneNumber__c</fullName>
    <label>Call transferred to mobile phone number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>