force-app/main/default/objects/SPEN_CallDetails__c/fields/SPEN_HighRiskCategory__c.field-meta.xml
<CustomField>
    <fullName>SPEN_HighRiskCategory__c</fullName>
    <label>High risk category</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>