force-app/main/default/objects/SPEN_CallDetails__c/fields/SPEN_IsHighRiskPresent__c.field-meta.xml
<CustomField>
    <fullName>SPEN_IsHighRiskPresent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is high risk word(s) present</label>
    <type>Checkbox</type>
</CustomField>