force-app/main/default/objects/SPEN_CallDetails__c/fields/SPEN_MPAN_Number__c.field-meta.xml
<CustomField>
    <fullName>SPEN_MPAN_Number__c</fullName>
    <label>MPAN Number</label>
    <length>24</length>
    <type>Text</type>
</CustomField>