force-app/main/default/objects/SPEN_CallDetails__c/fields/SPEN_ParentVoiceCall__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ParentVoiceCall__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Voice Call</label>
    <referenceTo>VoiceCall</referenceTo>
    <relationshipLabel>Call Details</relationshipLabel>
    <relationshipName>Call_Details</relationshipName>
    <type>Lookup</type>
</CustomField>