force-app/main/default/objects/SPEN_CallDetails__c/fields/SPEN_TalkTime__c.field-meta.xml
<CustomField>
    <fullName>SPEN_TalkTime__c</fullName>
    <description>This field is used for Connections Process.</description>
    <label>Talk Time</label>
    <length>30</length>
    <type>Text</type>
</CustomField>