force-app/main/default/objects/SPEN_CallDetails__c/fields/SPEN_TimetoCallback__c.field-meta.xml
<CustomField>
    <fullName>SPEN_TimetoCallback__c</fullName>
    <label>Time to Callback</label>
    <type>Time</type>
</CustomField>