force-app/main/default/objects/SPEN_CallDetails__c/fields/SPEN_TransferredTo__c.field-meta.xml
<CustomField>
    <fullName>SPEN_TransferredTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field will be populated by IVR,  if any agent is out of office and picked up the diverted call on his personal number</description>
    <label>Call transferred to</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Call_Details</relationshipName>
    <type>Lookup</type>
</CustomField>